<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context="com.invictos.ssid.wardy_driver.MainActivity"
    android:background="@color/green_wardy">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_wardy_01" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/editText_user"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_above="@+id/textInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_white"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:minWidth="180dp"
            android:textSize="16sp"
            android:textColor="@color/green_wardy"
            android:textColorHint="@color/green_wardy"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minWidth="180dp"
            android:textSize="16sp"
            android:layout_weight="0.07"
            android:textColor="@color/green_wardy"
            android:textColorHint="@color/green_wardy"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:fontFamily="sans-serif-medium"
            android:text="Ingresar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_login_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/login_reminder"
            android:textAllCaps="false"
            android:textColor="#eeff00" />

    </LinearLayout>

    <TextView
        android:id="@+id/textFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="Cuidamos de ti en cada viaje."
        android:textSize="20sp" />

</RelativeLayout>